Fixes to CSS for the Highlight Cells to take precedence over 'can be solved' and 'incorrect' highlighted cells, and to add styles for dark mode.

--- a/src/Grid.css
+++ b/src/Grid.css
@@ -34,7 +34,9 @@
     background-color: #ffe9e9;
     box-shadow: inset 0 0 0 1px #fff, inset 0 0 0 2px #ffbebe;
 }
-.has-candidate {
+.has-candidate,
+.has-candidate.can-be-solved,
+.has-candidate.incorrect {
     background-color: #ffffdd;
     box-shadow: inset 0 0 0 1px #fff, inset 0 0 0 2px #eeee66;
 }
@@ -134,6 +136,12 @@
 .dark-mode .highlight-incorrect-cells .incorrect {
     background-color: #533838;
     box-shadow: inset 0 0 0 1px #303030, inset 0 0 0 2px #7e6464;
+}
+.dark-mode .has-candidate,
+.dark-mode .has-candidate.can-be-solved,
+.dark-mode .has-candidate.incorrect {
+    background-color: #404020;
+    box-shadow: inset 0 0 0 1px #303030, inset 0 0 0 2px #666620;
 }
 .dark-mode .candidates {
     color: #d6d6d6;
